--- a/lesson11/signInApp/pages/signIn.html
+++ b/lesson11/signInApp/pages/signIn.html
@@ -40,6 +40,7 @@
 
       <!-- <label for="v_password">Verify Password</label>
       <input type="password" id="v_password" name="v_password" /> -->
+      <!-- test -->
 
       <button type="submit">Register</button>
     </form>
